--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@500&family=Ubuntu:wght@300;500;700&display=swap");
 
 body {
-  background-color: #1f1f38;
+  background-color: #121212;
+  color: #ffffff;
 }
 
 * {
@@ -22,6 +23,7 @@ body {
   border-bottom: 0.5px solid #ffffff52;
   border-width: 80%;
   margin-bottom: 1rem;
+  background-color: #000000;
 }
 
 #navbar ul {
