--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 
 #navbar ul li a {
   text-decoration: none;
+  color: #ffffff;
   padding: 0.5rem 0.9rem;
 }
 
@@ -53,7 +54,7 @@ body {
 
 .nav-col a:hover {
   border-radius: 0.4rem;
-  color: #1f1f38;
+  color: #000000;
   background-color: #fff;
 }
 
@@ -70,7 +71,7 @@ body {
 
 .home-left h6,
 h4 {
-  color: hsl(240deg 8% 43%);
+  color: color: #ffffff;
   margin: 1rem 0;
   margin-left: 3px;
   font-size: 1.2rem;
@@ -78,6 +79,7 @@ h4 {
 
 .home-left h1 {
   font-size: 2.5rem;
+  color: #1db954;
 }
 
 .home-right {
@@ -135,8 +137,8 @@ h4 {
 .test-item {
   width: 20rem;
   margin: 0 2rem;
-  background: #2c2c6c;
-  border: 0.5px solid #2c2c6c;
+  background: #000000;
+  border: 0.5px solid #1db954;
   border-radius: 1.5rem;
   padding: 2rem 1rem;
   text-align: center;
@@ -144,7 +146,8 @@ h4 {
 }
 
 .test-item:hover {
-  background-color: transparent;
+  background-color: #1db954;
+  color: #000000;
 }
 
 .test-item img {
@@ -202,10 +205,16 @@ h4 {
   overflow: hidden;
   width: 20rem;
   margin: 1rem;
-  background: #2c2c6c;
+  background: #000000;
   border-radius: 1.5rem;
   padding: 2rem 1rem;
   text-align: center;
+  border: 0.5px solid #1db954;
+}
+
+.projects-item:hover {
+  background-color: #e50914; /* Accent */
+  color: #ffffff; /* Text */
 }
 
 .projects-item h1 {
@@ -244,7 +253,7 @@ textarea {
 
 /* Footer Section  */
 #footer {
-  background-color: #4db5ff;
+  background-color: #000000;
   padding: 2rem;
   padding-bottom: 4rem;
 }
@@ -257,12 +266,12 @@ ul li {
 ul li a {
   text-decoration: none;
   font-size: 1.2rem;
-  color: #1f1f38;
+  color: #1db954;
   transition: all 0.5s;
 }
 
 ul li a:hover {
-  color: #fff;
+  color: #e50914;
 }
 
 .font-awesome {
@@ -273,7 +282,7 @@ ul li a:hover {
   background-color: #1f1f38;
   padding: 0.6rem;
   border: 1px solid #1f1f38;
-  color: #fff;
+  color: #000000;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
@@ -283,7 +292,7 @@ ul li a:hover {
   border: 1px solid #1f1f38;
   border-radius: 0.5rem;
   background: transparent;
-  color: #1f1f38;
+  color: #e50914;
 }
 
 #footer p {
@@ -293,8 +302,8 @@ ul li a:hover {
 
 /* Scroll Top */
 #scroll-top {
-  background-color: #4db5ff;
-  color: #151527;
+  background-color: #1db954;
+  color: #000000;;
   padding: 9px;
   border-radius: 9px;
   width: 35px;
@@ -325,7 +334,7 @@ ul li a:hover {
 #bottom .bottom-nav {
   height: 4rem;
   padding: 0 2rem;
-  background-color: #151527;
+  background-color: #000000;
   border-radius: 3rem;
   z-index: 1000;
   display: -webkit-inline-box;
@@ -346,7 +355,7 @@ ul li a:hover {
 }
 
 #bottom .bottom-nav li:hover {
-  background-color: #4db5ff;
+  background-color: #1db954;
 }
 
 #bottom .bottom-nav li:active {
